--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,47 @@
+
+
+*{
+  border: 1px solid red;
+}
 body {
   background: blanchedalmond;
+  margin: 0;
+  text-align: center;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: space-between;
+}
+
+.a{
+  background-color: rgb(128, 0, 70);
+  flex-grow: 1;
+  margin: 10px;
+}
+
+.b{
+  background-color: rgb(98, 0, 255);
+  flex-grow: 5;
+  margin: 10px;
+}
+
+.c{
+  background-color: rgb(43, 137, 226);
+  flex-grow: 1;
+  margin: 10px;
+}
+
+@media(min-width: 600px) {
+
+  .container{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .a{
+    width: 100vw;
+  }
 }
