--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,65 @@
+*{
+  border: 1px solid red;
+}
+
+
 body {
   background: papayawhip;
+  text-align: center;
 }
+
+.container{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: space-between;
+}
+
+header, footer {
+  flex-grow: 1;
+}
+
+main {
+  flex-grow: 3;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.a {
+  background-color: rgb(98, 157, 157);
+  margin: 1em;
+  flex-direction: column;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  width: 100%;
+}
+
+.a, .b, .c {
+  background-color: red;
+  margin: 1em;
+  flex-direction: row;
+
+  flex-grow: 1;
+  max-height: 30%;
+  width: 100%;
+}
+
+
+
+.e {
+  background-color: purple;
+  margin: 1em;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  width: 100%;
+}
+.f {
+  background-color: aquamarine;
+  margin: 1em;
+  flex-grow: 1;
+  width: 100%;
+  margin: 1em;
+}
+
+@media
